# linkedin-export-cv

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/linkedin_export_cv/: __init__.py  cv_to_pdf.py  zip_to_cv.py
tests/: test_cv_to_pdf.py  test_zip_to_cv.py
