[project]
name = "linkedin-export-cv"
version = "0.1.0"
description = "Generate a Markdown and PDF CV from a LinkedIn data export"
readme = "README.md"
license = { text = "GPL-2.0" }
requires-python = ">=3.10"
dependencies = [
    "markdown",
    "weasyprint",
]

[project.scripts]
zip-to-cv = "linkedin_export_cv.zip_to_cv:main"
cv-to-pdf = "linkedin_export_cv.cv_to_pdf:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyright"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_export_cv"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
