[project]
name = "linkedin-export-cv"
version = "0.1.0"
description = "Generate a Markdown and PDF CV from a LinkedIn data export"
authors = [{ name = "Alexis Grao Redondo" }]
readme = "README.md"
license = { text = "GPL-2.0" }
requires-python = ">=3.10"
keywords = ["linkedin", "cv", "resume", "markdown", "pdf", "export"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "markdown",
    "weasyprint",
]

[project.scripts]
zip-to-cv = "linkedin_export_cv.zip_to_cv:main"
cv-to-pdf = "linkedin_export_cv.cv_to_pdf:main"

[project.urls]
Homepage = "https://github.com/AlexisDx13/linkedin-export-cv"
Repository = "https://github.com/AlexisDx13/linkedin-export-cv"
Issues = "https://github.com/AlexisDx13/linkedin-export-cv/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyright"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_export_cv"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
